--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,9 +11,9 @@
 }
 
 @layer base {
-  .font-manrope {
+  /* .font-manrope {
     @apply font-['Manrope'];
-  }
+  } */
 
   .wrapper {
     @apply max-w-[1200px] mx-auto px-4 lg:px-8;
